--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -35,21 +35,21 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img
-                src="gos-simvolika/gerb-of-Belarus.png" alt="" class="dre"> </a>
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсавецкую прастору <img src="gos-simvolika/gerb-of-Belarus.png"
+                alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/country/" >Краіны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
-            <a href="/political-na-postsovet-space/country/belarus/" id="id">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/belarus/" >Беларусь</a>
+            <a href="/political-na-postsovet-space/country/russia/">Расія</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украіна</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
 
         </div>
         <div id="nav-country">
-            <a href="#" id="id">Основная информация</a>
-            <a href="gos-simvolika/">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/belarus/" >Асноўная інфармацыя</a>
+            <a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Дзяржаўная сімволіка</a>
         </div>
     </header>
     <main>
@@ -57,8 +57,8 @@
             <h1>Белоруссия</h1>
             <hr>
             <p>
-                Белору́ссия, официальное название —
-                Респу́блика Белару́сь , — государство в Восточной Европе. Население на 1 января 2020 года
+                Белоруссия, официальное название —
+                Республика Беларусь , — государство в Восточной Европе. Население на 1 января 2020 года
                 составляет 9 408 400 человек, территория — 207 595 км². Занимает 93-е место по количеству
                 населения и 84-е по территории в мире.
             </p>
@@ -159,59 +159,61 @@
                 не менее 2/3 от полного состава Палаты представителей.
             </p>
             <h4>Список президентов Республки Беларусь</h4>
-            <table border="1" rules="all" class="table text-info table-bordered">
-                <thead class="table-primary">
-                    <tr>
-                        <th scope="col">№ </th>
-                        <th scope="col">Срок</th>
+            <div class="wer">
+                <table border="1" rules="all" class="table text-info table-bordered">
+                    <thead class="table-primary">
+                        <tr>
+                            <th scope="col">№ </th>
+                            <th scope="col">Срок</th>
 
-                        <th scope="col">Фамилия Имя Отчество (Год жизни)</th>
-                        <th scope="col" colspan="2">Срок полномочий</th>
+                            <th scope="col">Фамилия Имя Отчество (Год жизни)</th>
+                            <th scope="col" colspan="2">Срок полномочий</th>
 
-                    </tr>
-                </thead>
-                <tbody class="ussr">
-                    <tr>
-                        <th scope="row" rowspan="6">1</th>
-                        <td>1</td>
+                        </tr>
+                    </thead>
+                    <tbody class="ussr">
+                        <tr>
+                            <th scope="row" rowspan="6">1</th>
+                            <td>1</td>
 
-                        <td rowspan="6">Александр Григорьевич Лукашенко <br> (р. 1954)</td>
-                        <td>20 <br> июля <br> 1994</td>
-                        <td>20 <br> сентября <br> 2001</td>
+                            <td rowspan="6">Александр Григорьевич Лукашенко (р. 1954)</td>
+                            <td>20 июля 1994</td>
+                            <td>20 сентября 2001</td>
 
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>20 <br> сентября <br> 2001</td>
-                        <td>8 <br> апреля <br> 2006</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>20 сентября 2001</td>
+                            <td>8 апреля 2006</td>
 
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>8 <br> апреля <br> 2006</td>
-                        <td>21 <br> января <br> 2011</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>8 апреля 2006</td>
+                            <td>21 января 2011</td>
 
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>21 <br> января <br> 2011</td>
-                        <td>6 <br> ноября <br> 2015</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>21 января 2011</td>
+                            <td>6 ноября 2015</td>
 
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>6 <br> ноября <br> 2015</td>
-                        <td>23 <br> сентября <br> 2020</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>6 ноября 2015</td>
+                            <td>23 сентября 2020</td>
 
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>23 <br> сентября <br> 2020</td>
-                        <td>н. в.</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>23 сентября 2020</td>
+                            <td>н. в.</td>
 
-                    </tr>
-                </tbody>
-            </table>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
             <div class="president">
                 <h3>Фото президентов Республики Беларусь</h3>
                 <div class="lukashenko">
@@ -256,10 +258,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-                <div class="col-sm">
-                    <img src="Lukashenko.jpg" alt="">
 
-                </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
