--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -29,29 +29,29 @@
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <title>Государственное устройство Украины</title>
+    <title>Державний устрій України</title>
 
 </head>
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt="" class="dre"> </a>
-
-        <a href="/political-na-postsovet-space/country/" >Страны</a>
+        <a href="/political-na-postsovet-space/">Пострадянський простір  <img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="" class="dre"> </a>
+      
+        <a href="/political-na-postsovet-space/country/" >Країни</a>
         <div>
-            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
-            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/ussr/">СРСР</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Білорусь</a>
+            <a href="/political-na-postsovet-space/country/russia/">Росія</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Україна</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div class="nav-country">
 
-            <a href="/political-na-postsovet-space/country/ukraine/">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/gos-system" >Государственное устройство</a>
+            <a href="/political-na-postsovet-space/country/ukraine/" >Основна інформація</a>
+            <a href="/political-na-postsovet-space/country/ukraine/gos-system">Державний устрій</a>
 
-            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Державна символіка</a>
         </div>
     </header>
     <main>
