--- a/country/ussr/Leaders-of-the-USSR/index.html
+++ b/country/ussr/Leaders-of-the-USSR/index.html
@@ -38,21 +38,21 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
-     
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство  <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="" class="dre"> </a>
+  
+        <a href="/political-na-postsovet-space/country/" >Страны</a>
         <div>
-            <a href="/political-na-postsovet-space/country/ussr/" id="id">СССР</a>
-            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/ussr/" >СССР</a>
+            <a href="/political-na-postsovet-space/country/belarus/">БССР</a>
+            <a href="/political-na-postsovet-space/country/russia/">РСФСР</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">УССР</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="/political-na-postsovet-space/country/ussr/">Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ussr/" >Основная информация</a>
             <a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственная символика</a>
-            <a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/" id="id">Руководители СССР</a>
+            <a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
         </div>
 
     </header>
