--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -35,19 +35,21 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="gerb-of-Belarus.png" alt="герб ССР" class="dre"> </a>
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/">Постсавецкую прастору <img src="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
+                alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/country/" >Краіны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
-            <a href="/political-na-postsovet-space/country/belarus/" id="id">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/belarus/" >Беларусь</a>
+            <a href="/political-na-postsovet-space/country/russia/">Расія</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украіна</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+
         </div>
         <div id="nav-country">
-            <a href="/political-na-postsovet-space/country/belarus/">Основная информация</a>
-            <a href="gos-simvolika/" id="id">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/belarus/" >Асноўная інфармацыя</a>
+            <a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Дзяржаўная сімволіка</a>
         </div>
     </header>
     <main>
@@ -200,8 +202,7 @@
                             Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
-                <div class="col-sm"><img src="/political-na-postsovet-space/country/belarus/Lukashenko.jpg" alt="">
-                </div>
+                
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
@@ -225,7 +226,7 @@
                 </div>
 
             </div>
-
+<hr>
         </div>
         <hr>
         </div>
