--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -28,7 +28,7 @@
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <title>Российская Федерация</title>
+    <title>Россия</title>
 
 </head>
 
@@ -40,7 +40,7 @@
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" >Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/" >Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
