--- a/country/russia/russian-tradition/index.html
+++ b/country/russia/russian-tradition/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img
+        <a href="/political-na-postsovet-space/">Постсоветское пространство <img
                 src="/political-na-postsovet-space/country/russia/gos-simvolika/emblem_gold.svg" alt="" class="dre">
         </a>
 
@@ -45,7 +45,7 @@
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/">Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
