--- a/country/russia/russian-tradition/russian-kithen/index.html
+++ b/country/russia/russian-tradition/russian-kithen/index.html
@@ -35,13 +35,13 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Постсоветское пространство | <img src="grecha-s-sosisonami/scale_1200.webp" alt="" class="dre"> </a>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство <img src="grecha-s-sosisonami/scale_1200.webp" alt="" class="dre"> </a>
        
-        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <a href="/political-na-postsovet-space/country/" >Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" >Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/russia/" >Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
