--- a/country/index.html
+++ b/country/index.html
@@ -41,7 +41,7 @@
         <div>
             <a href="ussr/">СССР</a>
             <a href="belarus/">Беларусь</a>
-            <a href="russia/">Российская Федерация</a>
+            <a href="russia/">Россия</a>
             <a href="ukraine/">Украина</a>
             <a href="dni/">ДНР</a>
             <a href="lnr/">ЛНР</a>
@@ -70,6 +70,7 @@
                 <table border="1" rules="all" class="table text-info table-bordered" width="100%">
                     <thead class="table-primary">
                         <tr>
+                            <th scope="col" width="20px"></th>
                             <th scope="col" width="20px">Страна</th>
                             <th scope="col" width="20px">Столица</th>
                             <th scope="col" width="20px">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР
@@ -81,12 +82,10 @@
                         </tr>
                     </thead>
                     <tbody class="ussr">
-                        <tr style="background: rgba(209, 136, 0, 0.726);">
-                            <td>СССР</td>
-
+                        <tr >
+                            <td  rowspan="4">Страны ООН</td>
+                            <td >СССР</td>
                             <td>Москва</td>
-
-
                             <td>26 <br> декабря <br> 1991</td>
                             <td>22 402 200</td>
                             <td>292 610 734</td>
@@ -95,7 +94,7 @@
 
                         </tr>
                         <tr>
-                            <td><a href="russia/">Российская <br> Федерация</td>
+                            <td><a href="russia/">Россия</td>
 
                             </td>
                             <td>Москва</td>
@@ -138,6 +137,7 @@
 
                         </tr>
                         <tr style="background: brown;">
+                            <td  rowspan="2">Непризнанны государства</td>
                             <td><a href="dni">ДНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
 
                             <td>Донецк</td>
@@ -203,7 +203,7 @@
             <div class="president">
                 <h3>Государственные символы стран Постсоветского пространства </h3>
 
-            
+
                 <div class="glava">
                     <div class="press">
                         <h4>Республика Беларусь </h4>
