--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -504,12 +504,13 @@
                             <th scope="col"> Имя <br> Отчество <br> Фамилия <br> (Год жизни)</th>
                             <th scope="col" colspan="2">Срок полномочий</th>
                             <th scope="col">Срок в годах и месяцах</th>
+                            <th scope="col">Партия</th>
 
                         </tr>
                     </thead>
                     <tbody class="ussr">
                         <tr>
-                            <th scope="row" rowspan="2" style="background: red;">1</th>
+                            <th scope="row" rowspan="2" >1</th>
                             <td>1</td>
 
                             <td rowspan="2"><a target="_blank"
@@ -518,6 +519,7 @@
                             <td>10 июля 1991</td>
                             <td>9 августа 1996</td>
                             <td>4 года <br> 7 месяцев <br> 9 дней</td>
+                            <td  rowspan="5" style="background: red;">Беспартийный</td>
 
                         </tr>
                         <tr>
@@ -527,7 +529,7 @@
                             <td>3 года <br> 4 месяца <br> 22 дня</td>
                         </tr>
                         <tr>
-                            <th scope="row" style="background: red;">-</th>
+                            <th scope="row" >-</th>
                             <td>-</td>
 
                             <td>
@@ -542,7 +544,7 @@
 
                         </tr>
                         <tr>
-                            <th scope="row" rowspan="2" style="background: red;">2</th>
+                            <th scope="row" rowspan="2">2</th>
                             <td>1</td>
                             <td rowspan="2"><a target="_blank"
                                     href="https://ru.wikipedia.org/wiki/Путин,_Владимир_Владимирович">Владимир
@@ -560,7 +562,7 @@
                             <td>4 года</td>
                         </tr>
                         <tr>
-                            <th scope="row" style="background: blue;">3</th>
+                            <th scope="row" >3</th>
                             <td>1</td>
 
                             <td><a target="_blank"
@@ -570,10 +572,11 @@
                             <td>7 мая 2008</td>
                             <td>7 мая 2012</td>
                             <td>4 года</td>
+                            <td  rowspan="2" style="background: blue;">Единая Россия</td>
 
                         </tr>
                         <tr>
-                            <th scope="row" style="background: blue;">4</th>
+                            <th scope="row" ">4</th>
                             <td>3</td>
 
                             </td>
@@ -587,12 +590,13 @@
 
                         </tr>
                         <tr>
-                            <td style="background: red;">4</td>
+                            <td >4</td>
                             <td>4
                             </td>
                             <td>7 мая 2018</td>
                             <td>срок истекает <br> 7 мая 2024</td>
                             <td>6 лет</td>
+                            <td style="background: red;">Беспартийный</td>
                         </tr>
                     </tbody>
                 </table>
