--- a/country/index.html
+++ b/country/index.html
@@ -70,31 +70,81 @@
                 <table border="1" rules="all" class="table text-info table-bordered" width="100%">
                     <thead class="table-primary">
                         <tr>
-                            <th scope="col" width="20px"></th>
-                            <th scope="col" width="20px">Страна</th>
-                            <th scope="col" width="20px">Столица</th>
-                            <th scope="col" width="20px">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР
+                            <th scope="col"></th>
+                            <th scope="col">Страна</th>
+                            <th scope="col">Столица</th>
+                            <th scope="col">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР
                             </th>
-                            <th scope="col" width="20px">Территория <br> (км<sup>2</sup>)</th>
-                            <th scope="col" width="20px">Население</th>
+                            <th scope="col">Территория <br> (км<sup>2</sup>)</th>
+                            <th scope="col">Население</th>
+                            <th scope="col">Примечания</th>
 
 
                         </tr>
                     </thead>
                     <tbody class="ussr">
-                        <tr >
-                            <td  rowspan="4">Страны ООН</td>
-                            <td >СССР</td>
+                        <tr>
+                            <td rowspan="4">Страны ООН</td>
+                            <td><b><a href="/political-na-postsovet-space/country/ussr/" class="sos"> СССР</a></b>
+                                (сейчас - <b><a href="/political-na-postsovet-space/country/russia/" class="sos">
+                                        Россия</a></b>) </td>
                             <td>Москва</td>
                             <td>26 <br> декабря <br> 1991</td>
                             <td>22 402 200</td>
                             <td>292 610 734</td>
+                            <td rowspan="2">
+                                <p> Официально — <b> <a href="/political-na-postsovet-space/country/ussr/" class="sos">
+                                            Союз Советских Социалистических Республик.</a></b></p>
+                                <p>Образован по Союзному договору от 30 декабря 1922 года на месте бывшей Российской
+                                    империи объединением четырёх советских республик — РСФСР, Украинской ССР,
+                                    Белорусской ССР и ЗСФСР.
+                                </p>
+                                <p>
+                                    1 ноября 1991 — Съезд народных депутатов РСФСР внёс поправки в Конституцию РСФСР и,
+                                    среди прочего, изменил российский флаг — <b><a
+                                            href="/political-na-postsovet-space/country/russia/" class="sos">
+                                            Российская Советская Федеративная Социалистическая Республика</a></b>.
+                                </p>
+                                <p>
+                                    12 декабря 1991 — Верховный Совет РСФСР денонсировал Договор об образовании СССР
+                                    1922 года, Россия вышла из состава СССР.
+                                </p>
+                                <p>
+                                    21 декабря 1991 — Совет глав государств СНГ принял решение о поддержке продолжения
+                                    членства <b> Советского Союза</b> в ООН, включая Совет Безопасности,<b> Россией</b>.
+                                    24
+                                    декабря 1991 президент РСФСР Борис Ельцин проинформировал Генсека ООН о том, что
+                                    членство Советского Союза в ООН будет продолжено Российской Федерацией (РСФСР), в
+                                    связи с чем просил вместо названия «Союз Советских Социалистических Республик»
+                                    использовать наименование «<b>Российская Федерация</b>».
+                                </p>
+                                <p>
+                                    25 декабря 1991 — Верховный Совет РСФСР принял закон об изменении названия
+                                    государства с <b> <a href="/political-na-postsovet-space/country/russia/"
+                                            class="sos"> Российская Советская Федеративная Социалистическая Республика
+                                        </a> </b> на
+                                    <b><a href="/political-na-postsovet-space/country/russia/" class="sos"> Российская
+                                            Федерация (Россия)</a></b>.
+                                </p>
+                                <p>
+                                    26 декабря 1991 — Верхняя палата Верховного Совета СССР (Совет Республик) приняла
+                                    Декларацию № 142-Н о прекращении существования СССР.
+                                </p>
+                                <p>
+                                    11 декабря 1993 — изменён российский флаг: <b>Российская Федерация (Россия)</b>.
+                                </p>
+                                <p>
+                                    В Уставе ООН до сих пор именуется Союзом Советских Социалистических Республик.
+                                </p>
+
+                            </td>
 
 
 
                         </tr>
                         <tr>
-                            <td><a href="russia/">Россия</td>
+                            <td><b><a href="/political-na-postsovet-space/country/russia/" class="sos">
+                                Россия</a></b></td>
 
                             </td>
                             <td>Москва</td>
@@ -118,6 +168,7 @@
                             <td>24 <br>августа <br>1991</td>
                             <td>603 549</td>
                             <td>42 248 598</td>
+                            <td></td>
 
 
 
@@ -132,12 +183,13 @@
                             <td>25 <br> августа <br> 1991</td>
                             <td>207 600</td>
                             <td>9 475 600</td>
+                            <td></td>
 
 
 
                         </tr>
                         <tr style="background: brown;">
-                            <td  rowspan="2">Непризнанны государства</td>
+                            <td rowspan="2">Непризнанны государства</td>
                             <td><a href="dni">ДНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
 
                             <td>Донецк</td>
@@ -145,7 +197,7 @@
                             <td>7 <br> апреля <br> 2014 <br>(от Украины)</td>
                             <td>7 853</td>
                             <td>2 244 547</td>
-
+                            <td></td>
 
                         </tr>
                         <tr style="background: brown;">
@@ -158,7 +210,7 @@
                             <td>8 377</td>
                             <td>1 450 000</td>
 
-
+                            <td></td>
                         </tr>
 
                     </tbody>
