--- a/country/index.html
+++ b/country/index.html
@@ -89,7 +89,7 @@
                                 (сейчас - <b><a href="/political-na-postsovet-space/country/russia/" class="sos">
                                         Россия</a></b>) </td>
                             <td>Москва</td>
-                            <td>26 <br> декабря <br> 1991</td>
+                            <td>26  декабря 1991</td>
                             <td>22 402 200</td>
                             <td>292 610 734</td>
                             <td rowspan="2">
@@ -151,7 +151,7 @@
 
 
                             </td>
-                            <td>12 <br>декабря <br> 1991</td>
+                            <td>12 декабря 1991</td>
                             <td>17 125 191</td>
                             <td>146 781 095</td>
 
@@ -165,10 +165,10 @@
 
 
                             </td>
-                            <td>24 <br>августа <br>1991</td>
+                            <td>24 августа 1991</td>
                             <td>603 549</td>
                             <td>42 248 598</td>
-                            <td></td>
+                            <td>Временно отсутствует</td>
 
 
 
@@ -180,10 +180,10 @@
                             <td>Минск</td>
 
 
-                            <td>25 <br> августа <br> 1991</td>
+                            <td>25  августа  1991</td>
                             <td>207 600</td>
                             <td>9 475 600</td>
-                            <td></td>
+                            <td>Временно отсутствует</td>
 
 
 
@@ -194,10 +194,10 @@
 
                             <td>Донецк</td>
 
-                            <td>7 <br> апреля <br> 2014 <br>(от Украины)</td>
+                            <td>7  апреля  2014 (от Украины)</td>
                             <td>7 853</td>
                             <td>2 244 547</td>
-                            <td></td>
+                            <td>Временно отсутствует</td>
 
                         </tr>
                         <tr style="background: brown;">
@@ -206,11 +206,11 @@
                             <td>Луганск</td>
 
 
-                            <td>12 <br> мая <br> 2014 <br> (от Украины)</td>
+                            <td>12 мая  2014 (от Украины)</td>
                             <td>8 377</td>
                             <td>1 450 000</td>
 
-                            <td></td>
+                            <td>Временно отсутствует</td>
                         </tr>
 
                     </tbody>
