--- a/country/index.html
+++ b/country/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body>
+<body onload="startTime()">
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
 
@@ -67,33 +67,78 @@
             </p>
             <h2>Список стран Постсоветского пространства<sup><a href="#primechania" class="sos">1</a></sup></h2>
             <div class="wer">
-                <table border="1" rules="all" class="table text-info table-bordered" width="100%">
+                <table border="1" rules="all" class="table text-info table-bordered oon" >
                     <thead class="table-primary">
                         <tr>
-                            <th scope="col"></th>
+                            <th scope="col" width="5%"></th>
                             <th scope="col">Страна</th>
                             <th scope="col">Столица</th>
                             <th scope="col">Дата <br> незави-<br>симости / <br> дата <br> распада <br> СССР
                             </th>
                             <th scope="col">Территория <br> (км<sup>2</sup>)</th>
                             <th scope="col">Население</th>
-                            <th scope="col">Примечания</th>
+                            <th scope="col" width="70%">Примечания</th>
 
 
                         </tr>
                     </thead>
                     <tbody class="ussr">
                         <tr>
-                            <td rowspan="4">Страны ООН</td>
+                            <td rowspan="4">Страны <br> ООН</td>
+                            <td><a href="belarus/">Белорусская ССР</a>
+                                (сейчас — Белоруссия)</td>
+
+                            </td>
+                            <td>Минск</td>
+
+
+                            <td>25 августа 1991</td>
+                            <td>207 600</td>
+                            <td>9 475 600</td>
+                            <td>
+                                <p>
+                                    Официально — <b> Белорусская Советская
+                                        Социалистическая Республика </b> (белор. Беларуская Савецкая Сацыялістычная
+                                    Рэспубліка),
+                                    республика в составе СССР.
+                                </p>
+                                <p>
+                                    25 декабря 1951 — изменён белорусский флаг
+                                </p>
+                                <p>
+                                    25 августа 1991 — объявлена независимость, без проведения референдума о выходе из
+                                    СССР.
+                                </p>
+                                <p>
+                                    19 сентября 1991 — официальное название и флаг изменены на <b> Республика
+                                        Беларусь </b> (белор. Рэспубліка Беларусь). 26 декабря — независимость
+                                    состоялась
+                                    де-факто из-за прекращения существования СССР.
+                                </p>
+                                <p>
+                                    7 июня 1995 — изменён белорусский флаг: <img
+                                        src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"
+                                        alt="" class="flagi"> <b> Республика Беларусь</b>
+                                </p>
+                            </td>
+
+
+
+                        </tr>
+                        <tr>
+
                             <td><b><a href="/political-na-postsovet-space/country/ussr/" class="sos"> СССР</a></b>
                                 (сейчас - <b><a href="/political-na-postsovet-space/country/russia/" class="sos">
                                         Россия</a></b>) </td>
                             <td>Москва</td>
-                            <td>26  декабря 1991</td>
+                            <td>26 декабря 1991</td>
                             <td>22 402 200</td>
                             <td>292 610 734</td>
                             <td rowspan="2">
-                                <p> Официально — <b> <a href="/political-na-postsovet-space/country/ussr/" class="sos">
+                                <p> Официально — <b> <img
+                                            src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt=""
+                                            class="flagi"> <a href="/political-na-postsovet-space/country/ussr/"
+                                            class="sos">
                                             Союз Советских Социалистических Республик.</a></b></p>
                                 <p>Образован по Союзному договору от 30 декабря 1922 года на месте бывшей Российской
                                     империи объединением четырёх советских республик — РСФСР, Украинской ССР,
@@ -101,8 +146,10 @@
                                 </p>
                                 <p>
                                     1 ноября 1991 — Съезд народных депутатов РСФСР внёс поправки в Конституцию РСФСР и,
-                                    среди прочего, изменил российский флаг — <b><a
-                                            href="/political-na-postsovet-space/country/russia/" class="sos">
+                                    среди прочего, изменил российский флаг — <img
+                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png"
+                                        alt="" class="flagi"> <b><a href="/political-na-postsovet-space/country/russia/"
+                                            class="sos">
                                             Российская Советская Федеративная Социалистическая Республика</a></b>.
                                 </p>
                                 <p>
@@ -131,7 +178,9 @@
                                     Декларацию № 142-Н о прекращении существования СССР.
                                 </p>
                                 <p>
-                                    11 декабря 1993 — изменён российский флаг: <b>Российская Федерация (Россия)</b>.
+                                    11 декабря 1993 — изменён российский флаг: <img
+                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"
+                                        alt="" class="flagi"> <b>Российская Федерация (Россия)</b>.
                                 </p>
                                 <p>
                                     В Уставе ООН до сих пор именуется Союзом Советских Социалистических Республик.
@@ -143,8 +192,8 @@
 
                         </tr>
                         <tr>
-                            <td><b><a href="/political-na-postsovet-space/country/russia/" class="sos">
-                                Россия</a></b></td>
+                            <td style="margin: auto 0%;"><b><a href="/political-na-postsovet-space/country/russia/" class="sos">
+                                        Россия</a></b></td>
 
                             </td>
                             <td>Москва</td>
@@ -159,7 +208,7 @@
 
                         </tr>
                         <tr>
-                            <td><a href="ukraine/"> Украина</a></td>
+                            <td>Украинская ССР (сейчас -<a href="ukraine/" class="sos"> Украина</a>)</td>
 
                             <td>Киев</td>
 
@@ -168,36 +217,48 @@
                             <td>24 августа 1991</td>
                             <td>603 549</td>
                             <td>42 248 598</td>
-                            <td>Временно отсутствует</td>
 
-
-
-                        </tr>
-                        <tr>
-                            <td><a href="belarus/">Беларусь</a></td>
-
+                            <td>
+                                <p>
+                                    Официально — Украинская Советская Социалистическая Республика (укр. Українська
+                                    Радянська Соціалістична Республіка), республика в составе СССР.
+                                </p>
+                                <p>
+                                    21 ноября 1949 — изменён украинский флаг: Украинская ССР
+                                </p>
+                                <p>
+                                    16 июля 1990 — Верховный Совет УССР принял «Декларацию о государственном
+                                    суверенитете Украины»
+                                </p>
+                                <p>
+                                    24 августа 1991 — Верховный Совет УССР принял «Акт провозглашения независимости
+                                    Украины» и изменил официальное название на <b>Украина</b> (укр. Україна)
+                                </p>
+                                <p>
+                                    1 декабря 1991 — состоялся Всеукраинский референдум 1991 года, на котором было
+                                    подтверждено провозглашение независимости Украины
+                                </p>
+                                <p>
+                                    28 января 1992 — изменён украинский флаг: <img
+                                        src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
+                                        class="flagi"> Украина
+                                </p>
                             </td>
-                            <td>Минск</td>
-
-
-                            <td>25  августа  1991</td>
-                            <td>207 600</td>
-                            <td>9 475 600</td>
-                            <td>Временно отсутствует</td>
 
 
 
                         </tr>
+
                         <tr style="background: brown;">
                             <td rowspan="2">Непризнанны государства</td>
                             <td><a href="dni">ДНР</a><sup><a href="#primechania" class="sos">2</a></sup></td>
 
                             <td>Донецк</td>
 
-                            <td>7  апреля  2014 (от Украины)</td>
+                            <td>7 апреля 2014 (от Украины)</td>
                             <td>7 853</td>
                             <td>2 244 547</td>
-                            <td>Временно отсутствует</td>
+                            <td rowspan="2">Отсутствует</td>
 
                         </tr>
                         <tr style="background: brown;">
@@ -206,11 +267,11 @@
                             <td>Луганск</td>
 
 
-                            <td>12 мая  2014 (от Украины)</td>
+                            <td>12 мая 2014 (от Украины)</td>
                             <td>8 377</td>
                             <td>1 450 000</td>
 
-                            <td>Временно отсутствует</td>
+
                         </tr>
 
                     </tbody>
@@ -327,6 +388,7 @@
 
                 <div class="col-sm">
                     <p> &copy; 2020-2021 ООО "СССР" </p>
+                    <p id="txt"></p>
 
                 </div>
 
@@ -375,6 +437,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
         integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
         crossorigin="anonymous"></script>
+        <script src="time.js"></script>
 
 </body>
 
