--- a/country/russia/gos-simvolika/index.html
+++ b/country/russia/gos-simvolika/index.html
@@ -37,20 +37,20 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Post Soviet space  <img src="emblem_gold.svg" alt="" class="dre"> </a>
-  
-        <a href="/political-na-postsovet-space/country/" >Страны</a>
+        <a href="/political-na-postsovet-space/">Post Soviet space <img src="emblem_gold.svg" alt="" class="dre"> </a>
+
+        <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/" >Россия</a>
+            <a href="/political-na-postsovet-space/country/russia/">Россия</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div class="nav-country">
             <a href="/political-na-postsovet-space/country/russia/">Основная информация</a>
-            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/"  >Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/russia/gos-simvolika/">Государственная символика</a>
             <a href="/political-na-postsovet-space/country/russia/russian-tradition">Наши русские традиции</a>
             <a href="/political-na-postsovet-space/country/russia/president/">Президент</a>
         </div>
@@ -210,39 +210,37 @@
 
                 <div class="gimn">
 
-
-                    <p id="gimn">Россия — священная наша держава,</p>
-                    <p id="gimn">Россия — любимая наша страна.</p>
-                    <p id="gimn">Могучая воля, великая слава —</p>
-                    <p id="gimn">Твоё достоянье на все времена!</p>
-                    <br>
-                    <p id="gimn">Славься, Отечество наше свободное,</p>
-                    <p id="gimn">Братских народов союз вековой,</p>
-                    <p id="gimn">Предками данная мудрость народная!</p>
-                    <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
-                    <br>
-                    <p id="gimn">От южных морей до полярного края</p>
-                    <p id="gimn">Раскинулись наши леса и поля.</p>
-                    <p id="gimn">Одна ты на свете! Одна ты такая —</p>
-                    <p id="gimn">Хранимая Богом родная земля!</p>
-                    <br>
-                    <p id="gimn">Славься, Отечество наше свободное,</p>
-                    <p id="gimn">Братских народов союз вековой,</p>
-                    <p id="gimn">Предками данная мудрость народная!</p>
-                    <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
-                    <br>
-                    <p id="gimn">Широкий простор для мечты и для жизни</p>
-                    <p id="gimn">Грядущие нам открывают года.</p>
-                    <p id="gimn">Нам силу даёт наша верность Отчизне.</p>
-                    <p id="gimn">Так было, так есть и так будет всегда!</p>
-                    <br>
-                    <p id="gimn">Славься, Отечество наше свободное,</p>
-                    <p id="gimn">Братских народов союз вековой,</p>
-                    <p id="gimn">Предками данная мудрость народная!</p>
-                    <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
-
-
-
+                    <div class="text-gimn">
+                                <p id="gimn">Россия — священная наша держава,</p>
+                                <p id="gimn">Россия — любимая наша страна.</p>
+                                <p id="gimn">Могучая воля, великая слава —</p>
+                                <p id="gimn">Твоё достоянье на все времена!</p>
+                                <br>
+                                <p id="gimn">Славься, Отечество наше свободное,</p>
+                                <p id="gimn">Братских народов союз вековой,</p>
+                                <p id="gimn">Предками данная мудрость народная!</p>
+                                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                                <br>
+                                <p id="gimn">От южных морей до полярного края</p>
+                                <p id="gimn">Раскинулись наши леса и поля.</p>
+                                <p id="gimn">Одна ты на свете! Одна ты такая —</p>
+                                <p id="gimn">Хранимая Богом родная земля!</p>
+                                <br>
+                                <p id="gimn">Славься, Отечество наше свободное,</p>
+                                <p id="gimn">Братских народов союз вековой,</p>
+                                <p id="gimn">Предками данная мудрость народная!</p>
+                                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                                <br>
+                                <p id="gimn">Широкий простор для мечты и для жизни</p>
+                                <p id="gimn">Грядущие нам открывают года.</p>
+                                <p id="gimn">Нам силу даёт наша верность Отчизне.</p>
+                                <p id="gimn">Так было, так есть и так будет всегда!</p>
+                                <br>
+                                <p id="gimn">Славься, Отечество наше свободное,</p>
+                                <p id="gimn">Братских народов союз вековой,</p>
+                                <p id="gimn">Предками данная мудрость народная!</p>
+                                <p id="gimn">Славься, страна! Мы гордимся тобой!</p>
+                    </div>
                     <br>
                     <h3>Гимн России инструментал</h3>
                     <audio controls loop>
@@ -255,12 +253,12 @@
                     <br>
                     <h3>Гимн России хор</h3>
                     <div class="kiol">
-                    <audio controls >
-                        <source src="anthem-choir.mp3" type="audio/mpeg">
-                        Тег audio не поддерживается вашим браузером.
-                        <a href="anthem-choir.mp3">Скачайте
-                            музыку</a>.
-                    </audio>
+                        <audio controls>
+                            <source src="anthem-choir.mp3" type="audio/mpeg">
+                            Тег audio не поддерживается вашим браузером.
+                            <a href="anthem-choir.mp3">Скачайте
+                                музыку</a>.
+                        </audio>
                     </div>
                 </div>
                 <h2 id="Символ_Российского_рубля">Символ Российского рубля &#8381;</h2>
@@ -393,8 +391,8 @@
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                     <script src="https://yastatic.net/share2/share.js"></script>
-                    <div class="ya-share2" data-curtain 
-                        data-services="messenger,vkontakte,odnoklassniki,telegram"></div>
+                    <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
+                    </div>
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
@@ -423,8 +421,10 @@
                     <p><a href="/political-na-postsovet-space/country/russia/">Basic information</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/gos-simvolika/">State symbols</a>
                     </p>
-                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Our Russian traditions</a></p>
-                    <p><a href="/political-na-postsovet-space/country/russia/president/">President of the Russian Federation</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/russian-tradition/">Our Russian
+                            traditions</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/president/">President of the Russian
+                            Federation</a></p>
                     <p><a target="_blank" href="http://kremlin.ru">Website of the President of the Russia</a></p>
                     <p><b><a class="frd" href="/political-na-postsovet-space/country/russia/"> <img
                                     src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" class="fr"
