--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -61,7 +61,7 @@
                 Республики Беларусь: Государственный Герб Республики Беларусь, Государственный флаг Республики Беларусь
                 и Государственный гимн Республики Беларусь.
             </p>
-            <h2>Флаг</h2>
+            <h2 id="флаг">Флаг</h2>
             <hr>
             <p>
                 Национальный флаг используется с 7 июня 1995 года, через месяц после референдума. Флаг, наряду с гербом,
@@ -78,7 +78,7 @@
                 полосы — две (нижняя и верхняя) окрашены в белый цвет, а средняя — в красный. Он использовался с момента
                 распада СССР в 1991 по 7 июня 1995.
             </p>
-            <h2>Герб</h2>
+            <h2 id="герб">Герб</h2>
             <hr>
             <p>
                 Также как и флаг, герб был выбран на референдуме 1995 года. Элементы герба включают в себя полосы с
