--- a/country/ussr/gos-simvolika/index.html
+++ b/country/ussr/gos-simvolika/index.html
@@ -67,7 +67,7 @@
                 коммунистами и левыми на демонстрациях, в военных выступлениях красноармейцев, а также выполняли
                 роль государственных символов Советского Союза.
             </p>
-            <h2>Герб СССР</h2>
+            <h2 id="герб">Герб СССР</h2>
             <hr>
             <p>
                 <b> Герб СССР </b> — официальный государственный символ СССР, наряду с флагом и гимном, один из первых
@@ -111,7 +111,7 @@
                 в том числе и герба СССР (кроме употребления в информационных, музейных и подобных целях). Также
                 Европейским судом запрещена регистрация торговых марок с изображением герба СССР.
             </p>
-            <h2>Флаг СССР</h2>
+            <h2 id="флаг">Флаг СССР</h2>
             <hr>
             <p>
                 <b> Государственный флаг СССР </b> — официальный символ СССР (наряду с Государственным гербом и
