--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -56,7 +56,7 @@
     </header>
     <main>
         <div class="container">
-            <h2>Греб Украины</h2>
+            <h2 id="герб">Греб Украины</h2>
             <hr>
             <br>
             <p>
@@ -77,7 +77,7 @@
             <br>
             <br>
 
-            <h2>Флаг Украины</h2>
+            <h2 id="флаг">Флаг Украины</h2>
             <hr>
             <br>
             <p>
