--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -37,10 +37,10 @@
     <header>
         <a href="/political-na-postsovet-space/">Постсавецкую прастору <img src="gos-simvolika/gerb-of-Belarus.png"
                 alt="" class="dre"> </a>
-        <a href="/political-na-postsovet-space/country/" >Краіны</a>
+        <a href="/political-na-postsovet-space/country/">Краіны</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
-            <a href="/political-na-postsovet-space/country/belarus/" >Беларусь</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Расія</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украіна</a>
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
@@ -48,7 +48,7 @@
 
         </div>
         <div id="nav-country">
-            <a href="/political-na-postsovet-space/country/belarus/" >Асноўная інфармацыя</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Асноўная інфармацыя</a>
             <a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Дзяржаўная сімволіка</a>
         </div>
     </header>
@@ -249,6 +249,14 @@
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
                     </div>
+                    <br>
+                    <!-- Yandex.Metrika informer -->
+                    <a href="https://metrika.yandex.ru/stat/?id=73002322&amp;from=informer" target="_blank"
+                        rel="nofollow"><img
+                            src="https://informer.yandex.ru/informer/73002322/3_1_545C70FF_343C50FF_1_pageviews"
+                            style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                            title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+                    <!-- /Yandex.Metrika informer -->
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
