--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -35,9 +35,10 @@
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space/">Пострадянський простір  <img src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="" class="dre"> </a>
-      
-        <a href="/political-na-postsovet-space/country/" >Країни</a>
+        <a href="/political-na-postsovet-space/">Пострадянський простір <img
+                src="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" alt="" class="dre"> </a>
+
+        <a href="/political-na-postsovet-space/country/">Країни</a>
         <div>
             <a href="/political-na-postsovet-space/country/ussr/">СРСР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Білорусь</a>
@@ -48,7 +49,7 @@
         </div>
         <div class="nav-country">
 
-            <a href="/political-na-postsovet-space/country/ukraine/" >Основна інформація</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Основна інформація</a>
             <a href="/political-na-postsovet-space/country/ukraine/gos-system">Державний устрій</a>
 
             <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/">Державна символіка</a>
@@ -126,6 +127,14 @@
                     <script src="https://yastatic.net/share2/share.js"></script>
                     <div class="ya-share2" data-curtain data-services="messenger,vkontakte,odnoklassniki,telegram">
                     </div>
+                    <br>
+                    <!-- Yandex.Metrika informer -->
+                    <a href="https://metrika.yandex.ru/stat/?id=73002322&amp;from=informer" target="_blank"
+                        rel="nofollow"><img
+                            src="https://informer.yandex.ru/informer/73002322/3_1_545C70FF_343C50FF_1_pageviews"
+                            style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика"
+                            title="Яндекс.Метрика: данные за сегодня (просмотры, визиты и уникальные посетители)" /></a>
+                    <!-- /Yandex.Metrika informer -->
                 </div>
                 <div class="col-sm">
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
