--- a/country/index.html
+++ b/country/index.html
@@ -87,9 +87,15 @@
                     </thead>
                     <tbody class="ussr">
                         <tr>
-                            <td colspan="7" style="text-align: center;">Государства — члены ООН</td>
+                            <td colspan="7" style="text-align: center;">Государства — члены ООН <br>  <a href="#Беларусь"><img
+                                    src="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"
+                                    alt="" class="flagi"></a><a href="#Россия"> <img
+                                    src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg"
+                                    alt="" class="flagi"></a> <a href="#Украина"><img
+                                    src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png"
+                                    alt="" class="flagi"></a></td>
                         </tr>
-                        <tr>
+                        <tr id="Беларусь">
 
                             <td><a href="belarus/">Белорусская ССР</a>
                                 (сейчас — Белоруссия)</td>
@@ -111,9 +117,11 @@
                             <td>9 475 600</td>
                             <td>
                                 <p>
-                                    Официально — <b> Белорусская Советская
-                                        Социалистическая Республика </b> (белор. Беларуская Савецкая Сацыялістычная
-                                    Рэспубліка),
+                                    Официально — <b> <a href="/political-na-postsovet-space/country/belarus/">
+                                            Белорусская Советская
+                                            Социалистическая Республика </a> </b> (белор. <i> Беларуская Савецкая
+                                        Сацыялістычная
+                                        Рэспубліка</i>),
                                     республика в составе СССР.
                                 </p>
                                 <p>
@@ -139,9 +147,10 @@
 
 
                         </tr>
-                        <tr>
+                        <tr id="Россия">
 
-                            <td><b><a href="/political-na-postsovet-space/country/ussr/" class="sos"> СССР</a></b>
+                            <td><b><a href="/political-na-postsovet-space/country/ussr/" class="sos"> СССР
+                                    </a></b>
                                 (сейчас - <b><a href="/political-na-postsovet-space/country/russia/" class="sos">
                                         Россия</a></b>) </td>
                             <td>Москва</td>
@@ -159,8 +168,7 @@
                             <td rowspan="2">
                                 <p> Официально — <b> <img
                                             src="/political-na-postsovet-space/country/ussr/flag-of-USSR.png" alt=""
-                                            class="flagi"> <a href="/political-na-postsovet-space/country/ussr/"
-                                            class="sos">
+                                            class="flagi"> <a href="/political-na-postsovet-space/country/ussr/">
                                             Союз Советских Социалистических Республик.</a></b></p>
                                 <p>Образован по Союзному договору от 30 декабря 1922 года на месте бывшей Российской
                                     империи объединением четырёх советских республик — РСФСР, Украинской ССР,
@@ -170,8 +178,8 @@
                                     1 ноября 1991 — Съезд народных депутатов РСФСР внёс поправки в Конституцию РСФСР и,
                                     среди прочего, изменил российский флаг — <img
                                         src="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png"
-                                        alt="" class="flagi"> <b><a href="/political-na-postsovet-space/country/russia/"
-                                            class="sos">
+                                        alt="" class="flagi"> <b><a
+                                            href="/political-na-postsovet-space/country/russia/">
                                             Российская Советская Федеративная Социалистическая Республика</a></b>.
                                 </p>
                                 <p>
@@ -189,10 +197,10 @@
                                 </p>
                                 <p>
                                     25 декабря 1991 — Верховный Совет РСФСР принял закон об изменении названия
-                                    государства с <b> <a href="/political-na-postsovet-space/country/russia/"
-                                            class="sos"> Российская Советская Федеративная Социалистическая Республика
+                                    государства с <b> <a href="/political-na-postsovet-space/country/russia/">
+                                            Российская Советская Федеративная Социалистическая Республика
                                         </a> </b> на
-                                    <b><a href="/political-na-postsovet-space/country/russia/" class="sos"> Российская
+                                    <b><a href="/political-na-postsovet-space/country/russia/"> Российская
                                             Федерация (Россия)</a></b>.
                                 </p>
                                 <p>
@@ -236,7 +244,7 @@
 
 
                         </tr>
-                        <tr>
+                        <tr id="Украина">
                             <td>Украинская ССР (сейчас -<a href="ukraine/" class="sos"> Украина</a>)</td>
 
                             <td>Киев</td>
@@ -302,7 +310,18 @@
                             <td>7 апреля 2014 (от Украины)</td>
                             <td>7 853</td>
                             <td>2 244 547</td>
-                            <td rowspan="2">Отсутствует</td>
+                            <td rowspan="2">Оспаривается статус территорий между <a
+                                    href="/political-na-postsovet-space/country/ukraine/"><img
+                                        src="/political-na-postsovet-space/country/ukraine/flag-of-ukraine.png" alt=""
+                                        class="flagi"> Украиной</a> и <a
+                                    href="/political-na-postsovet-space/country/russia/"><img
+                                        src="/political-na-postsovet-space/country/russia/gos-simvolika/flag.svg" alt=""
+                                        class="flagi"> РФ</a>
+                                <ul>
+                                    <li>Украина не признает независимость ДНР и ЛНР</li>
+                                    <li>Россия со своей стороны тоже не признает независимость</li>
+                                </ul>
+                            </td>
 
                         </tr>
                         <tr>
